fixing bug in contact us not showing up on cause page #168

--- a/app/assets/stylesheets/controllers/causes/show.css.scss
+++ b/app/assets/stylesheets/controllers/causes/show.css.scss
@@ -132,6 +132,9 @@
   h4{
     color: #aaa;
   }
+  h3{
+    color: #555;
+  }
 }
 
 #causes-sort {
